@@ -52,10 +52,12 @@
 
         <!-- MAVEN_OPTS environment variable configuration is not picked up by jacoco, so we configure memory here -->
         <!-- The classPath setting is a workaround for https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=911925 -->
-        <argLine>-Xmx1024m -Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
+        <!-- The add-opens flag is required for system-rules library (EnvironmentVariables) to access
+             java.util.Collections via reflection on Java 17+ and some modern builds of earlier versions. See https://junit-pioneer.org/docs/environment-variables/ -->
+        <argLine>-Xmx1024m -Djdk.net.URLClassPath.disableClassPathURLCheck=true --add-opens java.base/java.util=ALL-UNNAMED</argLine>
 
-        <auto-value.version>1.11.0</auto-value.version>
-        <beam.version>2.65.0</beam.version>
+        <auto-value.version>1.11.1</auto-value.version>
+        <beam.version>2.69.0</beam.version>
 
         <!-- Keep these dependency versions in sync with what is pulled in by beam;
              check https://mvnrepository.com/artifact/org.apache.beam -->
@@ -101,7 +103,7 @@
                  TODO: Check if we can migrate to gson -->
             <groupId>com.google.http-client</groupId>
             <artifactId>google-http-client-jackson2</artifactId>
-            <version>1.47.0</version>
+            <version>1.47.1</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -119,7 +121,7 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.19.0</version>
+            <version>2.20.0</version>
         </dependency>
         <dependency>
             <groupId>com.github.everit-org.json-schema</groupId>
@@ -133,7 +135,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-text</artifactId>
-            <version>1.13.1</version>
+            <version>1.14.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -187,7 +189,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
-                <version>3.5.0</version>
+                <version>3.6.1</version>
                 <executions>
                     <execution>
                         <id>enforce-java</id>
@@ -206,7 +208,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.7.1</version>
+                <version>3.8.0</version>
                 <executions>
                     <execution>
                         <id>create-schemas-tarball</id>
@@ -229,7 +231,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
-                <version>3.5.0</version>
+                <version>3.6.3</version>
                 <executions>
                     <execution>
                         <goals>
@@ -290,7 +292,7 @@
                     <dependency>
                         <groupId>com.puppycrawl.tools</groupId>
                         <artifactId>checkstyle</artifactId>
-                        <version>10.23.1</version>
+                        <version>10.26.1</version>
                     </dependency>
                 </dependencies>
                 <executions>
@@ -380,7 +382,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
-                <version>3.6.0</version>
+                <version>3.6.1</version>
                 <executions>
                     <!-- add ingestion-core/src to all modules -->
                     <execution>
